# ESP8266-Smartlight

./: Color.cpp  Color.hpp  ESP8266-Smartlight.ino  LICENSE  README.md  SK6812.h  SK6812_defs.h  SK6812_dma.c  SK6812_dma.h  SK6812_gamma.cpp  SK6812_gamma.h  SK6812_i2s.cpp  SK6812_i2s.h  smartlight.ino  strip.pb.c  strip.pb.h  strip.proto
sender/: CMakeLists.txt  RemoteRGBWStrip.cpp  RemoteRGBWStrip.hpp  main.cpp
